src/objects/OrderApi__Business_Group__c.object
<CustomObject>
    <description>Separate groups or business entities to facilitate clear reporting on business lines and/or entities.</description>
    <fields>
        <fullName>OrderApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Business groups require a relationship to a default A/R account.</description>
        <inlineHelpText>**Required** Business groups require a relationship to a default A/R account.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Business Groups</relationshipLabel>
        <relationshipName>Business_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Entity_Type__c</fullName>
        <description>**Optional/When Applicable** Specify the Legal Entity Type for the Business Group.</description>
        <inlineHelpText>**Optional/When Applicable** Specify the Legal Entity Type for the Business Group.</inlineHelpText>
        <label>Business Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Doing Business As (DBA)</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Non-Profit 501(c)(3)</fullName>
                </value>
                <value>
                    <fullName>Non-Profit 501(c)(4)</fullName>
                </value>
                <value>
                    <fullName>Non-Profit 501(c)(5)</fullName>
                </value>
                <value>
                    <fullName>Non-Profit 501(c)(6)</fullName>
                </value>
                <value>
                    <fullName>Professional Corporation</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables the tax related validations and calculations.</description>
        <inlineHelpText>When checked, enables the tax related validations and calculations.</inlineHelpText>
        <label>Calculate Sales Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Memo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the GL Account used to create new credit memo receipts linked to this business group.</description>
        <inlineHelpText>Link to the GL Account used to create new credit memo receipts linked to this business group.</inlineHelpText>
        <label>Credit Memo Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Business Groups (Invoice Credit Memo Account)</relationshipLabel>
        <relationshipName>Credit_Memo_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Support_URL__c</fullName>
        <description>Fully qualified URL is required. A fully qualified URL contains the http:// (or https://www). If the URL is just your domain, the trailing / should also be provided.</description>
        <inlineHelpText>Fully qualified URL is required. A fully qualified URL contains the http:// (or https://www). If the URL is just your domain, the trailing / should also be provided.</inlineHelpText>
        <label>Customer Support URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Default_Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the Default Payment Gateway to the related Business Group.</description>
        <inlineHelpText>Defines the Default Payment Gateway to the related Business Group.</inlineHelpText>
        <label>Default Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Business Groups</relationshipLabel>
        <relationshipName>Business_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deposit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The default deposit account to use for posting cash entry transactions.</description>
        <inlineHelpText>**System Calculated/Override** The default deposit account to use for posting cash entry transactions.</inlineHelpText>
        <label>Deposit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Business Groups (Deposit Account)</relationshipLabel>
        <relationshipName>Business_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Briefly describe the ledger as you would like to see it on a report. (72 Chars. or less)</description>
        <inlineHelpText>Briefly describe the ledger as you would like to see it on a report. (72 Chars. or less)</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Name__c</fullName>
        <description>** System Calculated Override ** The name that should be displayed when the Business Group is referenced on Invoices and other external pages and documents. Defaults to the &quot;Name&quot; defined for the Business Group.</description>
        <inlineHelpText>** System Calculated Override ** The name that should be displayed when the Business Group is referenced on Invoices and other external pages and documents. Defaults to the &quot;Name&quot; defined for the Business Group.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Email__c</fullName>
        <description>** System Calculated ** The email address to display to customers on Invoices and related documents.</description>
        <inlineHelpText>** System Calculated ** The email address to display to customers on Invoices and related documents.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Shipping_By_Order_Total__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When selected, customers will see a single shipping rate for the entire order. Otherwise, customers will see shipping rates for each unique item in their order. In either case, shipping is calculated only for items that have &quot;Require Shipping&quot; enabled.</description>
        <inlineHelpText>When selected, customers will see a single shipping rate for the entire order. Otherwise, customers will see shipping rates for each unique item in their order. In either case, shipping is calculated only for items that have &quot;Require Shipping&quot; enabled.</inlineHelpText>
        <label>Enable Shipping by Order Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Homepage_URL__c</fullName>
        <description>Fully qualified URL is required. A fully qualified URL contains the http:// (or https://www). If the URL is just your domain, the trailing / should also be provided.</description>
        <inlineHelpText>Fully qualified URL is required. A fully qualified URL contains the http:// (or https://www). If the URL is just your domain, the trailing / should also be provided.</inlineHelpText>
        <label>Homepage URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Footer_HTML__c</fullName>
        <description>Custom message that displays at the bottom of all invoices.</description>
        <inlineHelpText>Custom message that displays at the bottom of all invoices.</inlineHelpText>
        <label>Invoice Footer HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Footer__c</fullName>
        <description>Custom message that displays at the bottom of all invoices and receipts.</description>
        <inlineHelpText>Message to display in the footer of the web invoices.</inlineHelpText>
        <label>Invoice/Receipt Footer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Header_Fieldset_CSV__c</fullName>
        <description>Stores the custom fieldsets of an invoice header as a CSV.</description>
        <inlineHelpText>Stores the custom fieldsets of an invoice header as a CSV.</inlineHelpText>
        <label>Invoice Header Fieldset CSV</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Header_HTML__c</fullName>
        <description>Custom message that displays at the top of all invoices.</description>
        <inlineHelpText>Custom message that displays at the top of all invoices.</inlineHelpText>
        <label>Invoice Header HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Header__c</fullName>
        <description>Custom message that displays at the top of all invoices and receipts.</description>
        <inlineHelpText>Message to display in the header (banner) of the web invoices.</inlineHelpText>
        <label>Invoice/Receipt Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Lines_Fieldset__c</fullName>
        <description>Stores the custom fieldsets of an invoice line as a CSV.</description>
        <inlineHelpText>Stores the custom fieldsets of an invoice line as a CSV.</inlineHelpText>
        <label>Invoice Lines Fieldset</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_OverPayment_Credit_Memo_Limit__c</fullName>
        <description>When an invoice is overpaid by an amount less than or equal to the value of this field, a new credit memo will be created and applied against the customer&apos;s account automatically.</description>
        <inlineHelpText>When an invoice is overpaid by an amount lesser or equal to the value of this field a new credit memo will be created and applied against the customers account automatically.</inlineHelpText>
        <label>Invoice Overpayment Credit Memo Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Write_off_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the GL Account used to write-off remaining balances for Invoices linked to this Business Group.</description>
        <inlineHelpText>Link to the GL Account used to write-off remaining balances for Invoices linked to this Business Group.</inlineHelpText>
        <label>Invoice Write-off Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Business Groups (Invoice Write-off Account)</relationshipLabel>
        <relationshipName>Invoice_Write_off_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Write_off_Limit__c</fullName>
        <description>When an Invoice is underpaid by an amount lesser or equal to the value of this field, the Invoice will automatically adjust itself and write off the remaining balance due.</description>
        <inlineHelpText>When an Invoice is underpaid by an amount lesser or equal to the value of this field the Invoice will automatically adjust itself and write-off the remaining balance due.</inlineHelpText>
        <label>Invoice Write-off Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Master__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the Business Group is enabled for e-invoicing and can connect to a Payment Gateway for e-payment processing. When unchecked, a Parent Business Group must be designated. Defaults checked.</description>
        <inlineHelpText>When checked, the Business Group is enabled for e-invoicing and can connect to a Payment Gateway for e-payment processing. When unchecked, a Parent Business Group must be designated. Defaults checked.</inlineHelpText>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mailing_Address__c</fullName>
        <defaultValue>$Organization.Street &amp;
BR() &amp;
$Organization.City &amp;
IF( ISBLANK($Organization.City) , &quot;&quot;, &quot;, &quot;) &amp;
$Organization.State &amp;
&quot; &quot; &amp;
$Organization.PostalCode &amp;
BR() &amp;
$Organization.Country</defaultValue>
        <description>** System Calculated Required Override ** The address to display on Invoices and related documents that reference the Business Group. Defaults from the Organization settings.</description>
        <inlineHelpText>** System Calculated Required Override ** The address to display on Invoices and related documents that reference the Business Group. Defaults from the Organization settings &quot;Address&quot; fields.</inlineHelpText>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Merchant_Location__c</fullName>
        <description>Some gateways allow you to customize the location of the merchant that appears on customer&apos;s credit card statements. (Optional) provide a merchant location descriptor.</description>
        <inlineHelpText>Some gateways allow you to customize the location of the merchant that appears on customer&apos;s credit card statements. (Optional) provide a merchant location descriptor.</inlineHelpText>
        <label>Merchant Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Merchant_Name__c</fullName>
        <defaultValue>$Organization.Name</defaultValue>
        <description>Some gateways allow you to customize the name that appears on customer&apos;s credit card statements. (Optional) provide a custom merchant name descriptor.</description>
        <inlineHelpText>Some gateways allow you to customize the name that appears on customer&apos;s credit card statements. (Optional) provide a custom merchant name descriptor.</inlineHelpText>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Parent_Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Business Group. Create a hierarchy of Business Groups by department, legal entity, etc. to improve Financial Reporting.</description>
        <inlineHelpText>Lookup Relationship to Business Group. Create a hierarchy of Business Groups by department, legal entity, etc. to improve Financial Reporting.</inlineHelpText>
        <label>Parent Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Affiliates &amp; Groups</relationshipLabel>
        <relationshipName>Business_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Phone__c</fullName>
        <defaultValue>$Organization.Phone</defaultValue>
        <description>** System Calculated Override ** The phone number to display to customers on Invoices and related documents. Defaults to the Organization&apos;s phone number.</description>
        <inlineHelpText>** System Calculated Override ** The phone number to display to customers on Invoices and related documents. Defaults to the Organization&apos;s phone number.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Authentication_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the customer paying a proforma invoice will be forced to authenticate prior to accepting payment.</description>
        <inlineHelpText>When checked, the customer paying a proforma invoice will be forced to authenticate prior to accepting payment.</inlineHelpText>
        <label>Proforma Invoice Authentication Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_Body__c</fullName>
        <description>The default message used as part of the &quot;Send Proforma Email&quot; Workflow</description>
        <inlineHelpText>The default message used as part of the &quot;Send Proforma Email&quot; Workflow</inlineHelpText>
        <label>Proforma Invoice Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_From_Address__c</fullName>
        <description>The email address of the sender of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</description>
        <inlineHelpText>The email address of the sender of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</inlineHelpText>
        <label>Proforma Invoice Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_From_Name__c</fullName>
        <description>The name of the sender of the proforma invoice email as it will display to your customers. Your user&apos;s first name and last name will be used if this field is left blank.</description>
        <inlineHelpText>The name of the sender of the proforma invoice email as it will display to your customers. Your user&apos;s first name and last name will be used if this field is left blank.</inlineHelpText>
        <label>Proforma Invoice Email From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_Subject__c</fullName>
        <description>The default subject of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</description>
        <inlineHelpText>The default subject of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</inlineHelpText>
        <label>Proforma Invoice Email Subject</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Footer__c</fullName>
        <description>The contents of this field will display inside the Footer of all proforma invoice documents generated from Sales Orders linked to this Business Group.</description>
        <inlineHelpText>The contents of this field will display inside the Footer of all proforma invoice documents generated from Sales Orders linked to this Business Group.</inlineHelpText>
        <label>Proforma Invoice Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Header__c</fullName>
        <description>The contents of this field will display inside the header of all proforma invoice documents generated from Sales Orders linked to this Business Group.</description>
        <inlineHelpText>The contents of this field will display inside the header of all proforma invoice documents generated from Sales Orders linked to this Business Group.</inlineHelpText>
        <label>Proforma Invoice Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Footer_HTML__c</fullName>
        <description>Custom message that displays at the bottom of all receipts.</description>
        <inlineHelpText>Custom message that displays at the bottom of all receipts.</inlineHelpText>
        <label>Receipt Footer HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Header_Fieldset_CSV__c</fullName>
        <description>Stores the custom fieldsets of a receipt header as a CSV.</description>
        <inlineHelpText>Stores the custom fieldsets of a receipt header as a CSV.</inlineHelpText>
        <label>Receipt Header Fieldset CSV</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Header_HTML__c</fullName>
        <description>Custom message that displays at the top of all receipts.</description>
        <inlineHelpText>Custom message that displays at the top of all receipts.</inlineHelpText>
        <label>Receipt Header HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Lines_Fieldset__c</fullName>
        <description>Stores the custom fieldsets of a receipt line as a CSV.</description>
        <inlineHelpText>Stores the custom fieldsets of a receipt line as a CSV.</inlineHelpText>
        <label>Receipt Lines Fieldset</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Required_Tax_Fields_CSV__c</fullName>
        <description>Enter the API name of the Sales Order Billing address field the system will require on checkout. (Ex. Billing_State__c)</description>
        <inlineHelpText>Enter the API name of the Sales Order Billing address field the system will require on checkout. (Ex. Billing_State__c)</inlineHelpText>
        <label>Required Tax Fields (CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Rate_Basis__c</fullName>
        <description>Select whether you want shipping to be calculated based on item weight or item value (price).</description>
        <inlineHelpText>Select whether you want shipping to be calculated based on item weight or item value (price).</inlineHelpText>
        <label>Shipping Rate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item Weight</fullName>
                    <default>true</default>
                    <label>Item Weight</label>
                </value>
                <value>
                    <fullName>Item Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Theme to use for the Business Group&apos;s eInvoicing portal.</description>
        <inlineHelpText>Link to the Theme to use for the Business Group&apos;s eInvoicing portal.</inlineHelpText>
        <label>Theme</label>
        <referenceTo>PagesApi__Theme__c</referenceTo>
        <relationshipLabel>Business Groups</relationshipLabel>
        <relationshipName>Business_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Transfers_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GL Account to use for intracompany transfer payable transactions.</description>
        <inlineHelpText>The GL Account to use for intracompany transfer payable transactions.</inlineHelpText>
        <label>Transfers Payable Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Business Groups (Transfers Payable Account)</relationshipLabel>
        <relationshipName>Transfers_Payable_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Transfers_Receivable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GL Account to use for intracompany transfer receivable transactions.</description>
        <inlineHelpText>The GL Account to use for intracompany transfer receivable transactions.</inlineHelpText>
        <label>Transfers Receivable Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Business Groups (Transfers Receivable Account)</relationshipLabel>
        <relationshipName>Transfers_Receivable_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>List of Business Group Types (Department, Affiliate, Partner, Etc.). Select the most appropriate type from the list.</description>
        <inlineHelpText>List of Business Group Types (Department, Affiliate, Partner, Etc.). Select the most appropriate type from the list.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Business Entity</fullName>
                </value>
                <value>
                    <fullName>Business Line</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Department Team</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Group</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Type__c</columns>
        <columns>OrderApi__Business_Entity_Type__c</columns>
        <columns>OrderApi__AR_Account__c</columns>
        <columns>OrderApi__Deposit_Account__c</columns>
        <columns>OrderApi__Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>